--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 <body>
     <section class="container">
         <section class="Sec-A">
-    
+            <ul class="homeSec">
+                <div class="logo">
+                    <img src="Images/spotifyLogo.svg" alt="">
+                    <h1>Spotify</h1>
+                </div>
+                <li>
+                    <img src="Images/home.svg" alt="">
+                    <h4>Home</h4>
+                </li>
+                <li>
+                    <img src="Images/search.svg" alt="">
+                    <h4>Search</h4>
+                </li>
+            </ul>
         </section>
         <section class="Sec-B">
             <nav>
