--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                     <button class="signUp">SignUp</button>
                 </div>
             </nav>
+
+            <div class="cardSection">
+                <div class="card">
+                    <img src="" alt="">
+                    <h1></h1>
+                </div>
+            </div>
         </section>
     </section>
 </body>
