--- a/index.html
+++ b/index.html
@@ -37,9 +37,78 @@
             </nav>
 
             <div class="cardSection">
-                <div class="card">
-                    <img src="" alt="">
-                    <h1></h1>
+                <h1 id="playlist">Spotify Playlists</h1>
+                <div class="cardList">
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
+                    <div class="card">
+                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
+                        <h1>Anil_kumar</h1>
+                        <h4>Anil_kumar hits</h4>
+                    </div>
                 </div>
             </div>
         </section>
