created playlist and added songs using js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <section class="container">
         <section class="Sec-A">
             <ul class="homeSec">
@@ -21,6 +22,16 @@
                 <li>
                     <img src="Images/search.svg" alt="">
                     <h4>Search</h4>
+                </li>
+            </ul>
+
+            <ul class="songList">
+                <li>
+                    <img class="invert" src="Images/music.svg" alt="">
+                    <div class="name">
+                        Hai hello world how are you doing
+                    </div>
+                    <img class="invert" src="Images/play-button.svg" alt="">
                 </li>
             </ul>
         </section>
@@ -54,62 +65,19 @@
                         <h1>Anil_kumar</h1>
                         <h4>Anil_kumar hits</h4>
                     </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
-                    <div class="card">
-                        <img src="CardImages/Thumbnail.jpeg" width="200" height="200" alt="">
-                        <h1>Anil_kumar</h1>
-                        <h4>Anil_kumar hits</h4>
-                    </div>
                 </div>
+            </div>
+            <div class="seekBar">
+                    <div class="songName">Hello Iam Anil_kumar</div>
+                    <div class="songBtns">
+                        <img src="Images/play-backwards.svg" alt="">
+                        <img src="Images/play-button.svg" alt="">
+                        <img src="Images/play-forwards.svg" alt="">
+                    </div>
+                    <div class="time">
+                        <span class="duration">00:00</span>
+                        <span class="currentTime">00:00</span>
+                    </div>
             </div>
         </section>
     </section>
