--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SpotifyWebApp-Clone</title>
     <link rel="stylesheet" href="style.css" />
     <title>Spotify-Web App</title>
+    <link rel="shortcut icon" href="Images/spotify.png" type="image/x-icon">
   </head>
   <body>
     <script src="script.js"></script>
